[gd_scene load_steps=2 format=3 uid="uid://d0qyqvk76p3pi"]

[ext_resource type="Script" path="res://GUI_elements/audio_options.gd" id="1_syw0o"]

[node name="AudioOptions" type="VBoxContainer"]
script = ExtResource("1_syw0o")

[node name="Audio" type="Label" parent="."]
layout_mode = 2
text = "Audio
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 2
columns = 3

[node name="Ambient" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Ambient"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AmbientSlider" type="HSlider" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
step = 10.0
rounded = true

[node name="AmbientValue" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(30, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 0
text = "100%"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Music" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Music"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicSlider" type="HSlider" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
step = 10.0
rounded = true

[node name="MusicValue" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(30, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 0
text = "100%
"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Combat" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Interface"

[node name="CombatSlider" type="HSlider" parent="GridContainer"]
layout_mode = 2
size_flags_vertical = 4
step = 10.0
rounded = true

[node name="CombatValue" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(30, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 0
text = "100%"
horizontal_alignment = 2
vertical_alignment = 1

[connection signal="value_changed" from="GridContainer/AmbientSlider" to="." method="_on_ambient_slider_value_changed"]
[connection signal="value_changed" from="GridContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="GridContainer/CombatSlider" to="." method="_on_combat_slider_value_changed"]
